----
MVDSV v0.178 Beta DEVELOP build 18?? (2005.0?.??)
[server]
- cmd minping can set minping value only between 0 and 300
- new cvar sv_default_name - default name for players and spectators
  default: unnamed
- bugfix from 0.1727 build 1666: "spectator 2" bug - allow to connect as spectator if all
  seats for spectators is already in use
- added support of non-qc mods from qw262:
    command line option -progtype
    sv_progtype
    sv_progsname
    command mod
- new cvar pm_spawnjumpfix 0/1 - don't jump if used jump button for respawn
    0 - don't fix
    1 - fix (like in ktpro by default)
    default: 1
(Thanks to Tonik)


----
MVDSV v0.177 build 1794 (2004.11.18)
[server]
- bugfix from 0.176: incorrect writing .mvd demos
- bugfix from 0.14b: incorrect writing .mvd demos if demo size is more than 3 time bigger than
democache size and sv_demoUseCache isn't 0
(Thanks to (ChoseN)puh)


----
MVDSV v0.176 build 1787 (2004.11.11)
[server]
- bugfix: didn't display *.mvd.gz files by cmd dlist and cmd demolist commands
- added message "Download stopped." if file downloading was stoped by cmd stopdownload
- bugfix: removed packet loss if file downloading was stoped by cmd stopdownload
- added command cmd stopdl - work same as cmd stopdownload
- added message "Download completed." after file download was completed by commands download,
  cmd download or cmd dl
- bugfix: added check for buffer overflow in demo-writing
(Thanks to SD-Angel)
[win32]
- bugfix: incorrect file sorting by date in Sys_listdir function
[unix]
- file ./build was replaced to ./configure
- merged and optimized Makefile-s for mvdsv and qwdtools
- bugfix: fixed Makefile.FreeBSD for making for Darwin/Mac OS X


----
MVDSV v0.175 build 1773
- changed all WIN32 and WINDOWS defines to _WIN32
- win32 projects cleaned up
- check define LITTLE_ENDIAN changed to check define __BIG_ENDIAN__ and dynamical determination of
  LITTLE/BIG ENDIAN changed to staticaly (removed variable qboolean bigendien)
[server]